scoped values - very basic example